# Demo-website

./: .gitignore  docker-compose.yml  package-lock.json
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 348e72576689_added_about_field_to_user_model.py  5a5de06e543b_initial_commit.py  6dfcbe447662_added_photo_url_for_users.py  8d293c03b75e_added_refill_and_refill_rent_models.py  c327b3ff80f1_added_refill_and_refill_rent_models.py  dc8a2a1bf790_added_birthdate_for_users.py
api/src/: database.py  get_service.py
api/src/config/: __init__.py  config.py
api/src/enums/: __init__.py  role.py
api/src/models/: __init__.py  refill.py  refill_rent.py  user.py
api/src/presentation/: app.py  lifespan.py
api/src/presentation/routers/: __init__.py  me_router.py  registration_router.py  token_router.py
api/src/presentation/routers/auth/: __init__.py  login_router.py  registration_router.py
api/src/repositories/: i_user_repository.py  user_repository.py
api/src/repositories/impls/: __init__.py  refill_rent_repository.py  refill_repository.py  user_repository.py
api/src/repositories/interfaces/: __init__.py  i_refill_rent_repository.py  i_refill_repository.py  i_user_repository.py
api/src/schemas/: __init__.py  refill.py  refill_create.py  refill_rent.py  token.py  user_create_data.py  user_data.py  user_input_data.py  user_return_data.py
api/src/services/: __init__.py  auth_service.py  refill_service.py  user_service.py
api/src/utils/: __init__.py  image_validator.py  passwd_utils.py  password_utils.py  token_utils.py
(+52 files in other folders)
