[tool.poetry]
name = "demo-website"
version = "0.1.0"
description = "Demo website"
authors = ["qiisqwww <qiisqwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.4"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
cryptography = "^43.0.3"
python-multipart = "^0.0.17"
fastapi-jwt-auth = "^0.5.0"
bcrypt = "^4.2.0"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
